--- a/css/main.css
+++ b/css/main.css
@@ -396,6 +396,9 @@ section#justify-content-section {
 
 /* align-items */
 section#align-items-section {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
   /* place your code here */
 }
 
@@ -433,6 +436,9 @@ section#align-items-section {
 
 /* flex-wrap */
 section#flex-wrap-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   /* place your code here */
 }
 
@@ -458,6 +464,10 @@ section#flex-wrap-section {
 
 /* align-content */
 section#align-content-section {
+  display: flex;
+  align-content: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
   /* place your code here */
 }
 
@@ -518,6 +528,10 @@ section#align-content-section {
 
 /* gap */
 section#gap-section {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   /* place your code here */
 }
 
@@ -543,6 +557,10 @@ section#gap-section {
 
 /* flex-direction section */
 section#flex-direction-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   /* place your code here */
 }
 
@@ -592,6 +610,9 @@ section#flex-direction-section {
 
 /* flex-flow section */
 section#flex-flow-section {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-evenly;
   /* place your code here */
 }
 
@@ -635,11 +656,19 @@ section#flex-flow-section {
 
 /* flex section */
 section#flex-content-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 600px;
   /* place your code here */
 }
 
 .flex-row-parent-container {
   /* Add display: flex; to make this div a parent flex container */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 600px;
 }
 
 .child-flex-basis-box {
@@ -674,31 +703,39 @@ section#flex-content-section {
 /* order */
 section#order-section {
   /* place your code here */
+  display: flex;
+  justify-content: space-around;
 }
 
 .order-parent-container {
   /* Add display: flex; to make this div a parent flex container */
+  display: flex;
   justify-content: space-around;
 }
 
 .order-child-flex-item-1 {
   /* place your code here */
+  order: 2;
 }
 
 .order-child-flex-item-2 {
   /* place your code here */
+  order: 5;
 }
 
 .order-child-flex-item-3 {
   /* place your code here */
+  order: 3;
 }
 
 .order-child-flex-item-4 {
   /* place your code here */
+  order: 4;
 }
 
 .order-child-flex-item-5 {
   /* place your code here */
+  order: 1;
 }
 
 /* end order */
@@ -706,35 +743,45 @@ section#order-section {
 /* align-self */
 section#align-self-section {
   /* place your code here */
+  display: flex;
+  justify-content: space-around;
 }
 
 .align-self-parent-container {
   /* Add display: flex; to make this div a parent flex container */
+  display: flex;
   justify-content: space-around;
 }
 
 .align-self-auto-child-flex-item {
   /* place your code here */
+  align-self: auto;
+
 }
 
 .align-self-flex-start-child-flex-item {
   /* place your code here */
+  align-self: auto;
 }
 
 .align-self-flex-end-child-flex-item {
   /* place your code here */
+  align-self: auto;
 }
 
 .align-self-center-child-flex-item {
   /* place your code here */
+  align-self: auto;
 }
 
 .align-self-baseline-child-flex-item {
   /* place your code here */
+  align-self: auto;
 }
 
 .align-self-stretch-child-flex-item {
   /* place your code here */
+  align-self: auto;
 }
 
 /* end align-self */
